<resources>
    <string name="app_name">GPS Tracker</string>
    <string name="home">Home</string>
    <string name="tracks">Tracks</string>
    <string name="settings">Settings</string>
    <string name="settings_location">Location</string>
    <string name="update_time">Update time</string>
    <string name="update_time_summary">Update time summary</string>
    <string name="track_color">Track color</string>
    <string name="track_color_summary">Choose track color</string>
    <string name="location_disabled">Location disabled</string>
    <string name="location_disabled_massage">Do you want enabled GPS?</string>
</resources>